# dax

./: .dax.yaml.example  .gitignore  CLAUDE.md  Dockerfile.matator  Dockerfile.tmpl  README.md  aws-dax.sh  aws_login.py  dax-creds-design.md  dax-defaults.yaml  dax.py  daxbuild.py  daxmatator  daxrun.py  pyproject.toml  util.py
.claude/: settings.local.json
backup/: .claude.json  .dax.yaml  .gitconfig  .vimrc  .zshrc
backup/.claude/: CLAUDE.md
backup/.claude/commands/: adaptive.md  agentflow.md  context_pipeline.md  controlflow.md  devops.md  taskengine.md
dax_creds/: chrome.py  cli.py  client.py  config.py  daemon.py  init.py
dax_creds/providers/: auggie.py  claude.py  github.py  ssh.py
dax_creds/wrappers/: auggie  claude  dax-creds-open-url  gh
docs/superpowers/plans/: 2026-05-02-dax-cleanup.md
dotfiles/: .mylscolors  .tmux.conf  .vimrc  .zshrc  .zshrc.mac
dotfiles/dfarrow/: .tmux.conf  dax.json
dotfiles/kfarrow/: .gitconfig  .tmux.conf  .vimrc  .zshrc  dax.json
tests/: test_build.py  test_config.py  test_dax_creds_auggie.py  test_dax_creds_chrome.py  test_dax_creds_claude.py  test_dax_creds_client.py  test_dax_creds_config.py  test_dax_creds_daemon.py  test_dax_creds_github.py  test_dax_creds_init.py  test_dax_creds_ssh.py  test_features.py
