[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dax"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["pyyaml"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[project.scripts]
dax = "dax:main"
dax-creds = "dax_creds.cli:main"

[tool.setuptools]
py-modules = ["dax"]
packages = ["dax_creds", "dax_creds.providers"]
